<resources>
    <string name="app_name">R6 Companion</string>
    <string name="key_preferences">com.zeuspalette.android.r6tab.saved_data</string>
    <string name="nav_drawer_attackers">Attackers</string>
    <string name="nav_drawer_defenders">Defenders</string>
    <string name="nav_drawer_units">Units</string>
    <string name="nav_drawer_weapons">Weapons</string>
    <string name="nav_main_info">Information</string>
    <string name="nav_bottom_info">Info</string>
    <string name="nav_bottom_primary">Primary</string>
    <string name="nav_bottom_secondary">Secondary</string>
    <string name="nav_bottom_gadget">Gadget</string>
    <string name="background">Background</string>
    <string name="profile">Psychological Profile</string>
    <string name="training">Training</string>
    <string name="experience">Experience</string>
    <string name="notes">Notes</string>
    <string name="title_firerate">Fire Rate</string>
    <string name="title_mobility">Mobility</string>
    <string name="title_capacity">Capacity</string>
    <string name="title_scope">Scopes</string>
    <string name="title_barrel">Barrels</string>
    <string name="title_underbarrel">Underbarrels</string>
    <string name="title_grip">Grips</string>
    <string name="title_comment">Notes</string>
    <string name="title_damage">Damage</string>
    <string name="title_stats">Stats</string>
    <string name="title_help_notes">Enter notes here ..</string>
    <string name="no_grip">No Grips Available</string>
    <string name="no_barrel">No Barrels Available</string>
    <string name="no_underbarrel">No Underbarrels Available</string>
    <string name="no_scope">No Scopes Available</string>
    <string name="no_sight">No Sights Available</string>
    <string name="flashbang">Flashbang</string>
    <string name="grenade">Grenade</string>
    <string name="breach">Breaching Charge</string>
    <string name="wire">Barbed Wire</string>
    <string name="shield">Shield</string>
    <string name="dialog_r">Thanks for installing R6 Companion. This app will always be free.Take a moment to share and rate us so that we can reach to more people.</string>
    <string name="dialog_1">This section shows you all the Attackers. Click on any Attacker to explore the details about their Weapons, Gadgets and  Abilities</string>
    <string name="dialog_2">This section shows you all the Defenders. Click on any Defender to explore the details about their Weapons, Gadgets and  Abilities</string>
    <string name="dialog_3">This section shows you all the available Units. Click on any Unit to learn about them and check the list of Operators under them</string>
    <string name="dialog_4">This section shows you all the Weapon Categories. Click on any Category to checkout all Weapons in that category.You can also click on [SHOW ALL] button to take a peek into the list of Weapons in that category</string>
    <string name="dialog_5">This section shows basic information about the Operator</string>
    <string name="dialog_6">This section shows the Primary Weapon loadout of the Operator. You can also take notes for individual Weapons on what attachments you prefer</string>
    <string name="dialog_7">This section shows the Secondary Weapon loadout of the Operator. You can also take notes for individual Weapons on what attachments you prefer</string>
    <string name="dialog_8">This section shows the Primary and Secondary Gadgets of the Operator. You can also find tips on how to use the Operator</string>
    <string name="dialog_9">This section shows the Attackers sorted by Speed and Armor</string>
    <string name="dialog_10">This section shows the Defenders sorted by Speed and Armor</string>
    <string name="dialog_n"></string>
    <string name="sledge_name">Seamus Cowden</string>
    <string name="sledge_dob">April 2nd, 1982</string>
    <string name="sledge_weight">1.92 M</string>
    <string name="sledge_height">95 KG</string>
    <string name="sledge_background">Seamus Cowden hails from the upper tip of Scottish Highlands. Due to his imposing physical presence and athleticism, he found early success as the Captain of the 1998 Scotland National under-20 Rugby Union Team. A strong desire for public service inspired Cowden to enlist in the army at 18, after five years on active duty, he was recruited by the S.A.S.</string>
    <string name="sledge_profile">Cowden displays natural leadership qualities, likely developed during his amateur sports career. This comfort on the front line can be attributed to his confidence and tactical experience.</string>
    <string name="sledge_training">British Army: 3rd (UK) Division \n\nS.A.S Operative</string>
    <string name="sledge_experience">Holds the all-time speed and strength record for the S.A.S qualifying physical exam. Seamus Cowden developed an operational expertise in breaking down barriers with a breaching hammer.</string>
    <string name="sledge_notes">Seamus Cowden was integral to the S.A.S, and his recruitment to Rainbow squad is a major coup for their operations. His professionalism and tactical abilities are beyond reproach, and he is expected to perform at the highest level in his new role.</string>
    <string name="sledge_gadget_name">THE CABER</string>
    <string name="sledge_gadget_name_byline">Tactical Breaching Hammer</string>
    <string name="sledge_gadget">Sledge use a Breaching Hammer to breach through walls.</string>
    <string name="sledge_gadget_one">Forged machined head for hammering and ramming with maximum damage and minimum slip.Forged machined head for hammering and ramming with maximum damage and minimum slip.</string>
    <string name="sledge_gadget_two">Molded fiberglass handle with two molded rings equally spaced to create stoppers preventing the operator\'s hands from slipping when ramming or swinging at objects.</string>
    <string name="sledge_gadget_three">Forged crowbar end.</string>
    <string name="thatcher_name">Mike Baker</string>
    <string name="thatcher_dob">June 22nd,1961</string>
    <string name="thatcher_weight">1.80 M</string>
    <string name="thatcher_height">72 KG</string>
    <string name="thatcher_background">Born into a family of stevedores, Baker enlisted for active military duty on his eighteenth birthday. A veteran of three wars, Baker was the oldest S.A.S operative on active duty until he was recruited by Rainbow.</string>
    <string name="thatcher_profile">Baker is highly observant, calculating and decisive. While his demeanor may denote traces of impatient cynicism, Baker possesses a profound sense of ethical responsibility. It is recommended to assign Baker with junior operators of strong moral conviction, whom he can mentor.</string>
    <string name="thatcher_training">British Army : Parachute Regiment \n\nBritish Army : S.A.S Bravo Two Zero \n\nBritish Army : S.A.S Warrant Officer Class 1 </string>
    <string name="thatcher_experience">Baker\'s exemplary performance, on and off the battlefield, during two politically charged conflicts made him a natural fit for VIP protection duty. He is highly proficient in close quarters combat, and is a world caliber expert in anti-electronics operation.</string>
    <string name="thatcher_notes">Saw action at the battle of Goose Green during the Falklands Conflict. On Team Blue of Operation Nimrod (Iranian Embassy siege, 1980). Veteran of unit Bravo Two Zero during Gulf War (1991).</string>
    <string name="thatcher_gadget_name">EMP GRENADE</string>
    <string name="thatcher_gadget_name_byline">EG MKO-EMP Grenade</string>
    <string name="thatcher_gadget">Thatcher uses EMP grenade to disable any electronics in range.</string>
    <string name="thatcher_gadget_one">The copper spool builds the EMP by spinning.</string>
    <string name="thatcher_gadget_two">Twist top 45 degrees to activate the device.</string>
    <string name="ash_name">Eliza Cohen</string>
    <string name="ash_dob">December 24th, 1983</string>
    <string name="ash_weight">1.70 M</string>
    <string name="ash_height">63 KG</string>
    <string name="ash_background">Cohen was born and raised in Jerusalem. After secondary school,she enrolled at Tel Aviv University, in the Engineering program, where she did a semester abroad at Boston University. After college she performed her civic duty enlisting in the Israeli Defense Forces. Her background in engineering made her a prime candidate for mechanical maintenance and demolitions.</string>
    <string name="ash_profile">Her military training as a demolitions specialist has left Cohen with an inflated sense of self. She can be aggressive, impulsive and overly confident. She is quick to action, which can be an asset or fatal for someone in her line of work.</string>
    <string name="ash_training">Tel Aviv University: Bachelor of Science, Engineering. \n\nIsraeli Air Forces \n\nShaldag \n\nFBI SWAT (JINSA LEEP)</string>
    <string name="ash_experience">Second Lebanon War \n\nOperation Orchard \n\nAustere Challenge</string>
    <string name="ash_notes">None</string>
    <string name="ash_gadget_name">M120 CREM</string>
    <string name="ash_gadget_name_byline">Compact Rifle Entry Munition</string>
    <string name="ash_gadget">Ash fires an explosive Breach Round that burrows into a surface and automatically detonates.</string>
    <string name="ash_gadget_one">Modified grenade launcher.</string>
    <string name="ash_gadget_two">40mm breaching round.</string>
    <string name="thermite_name">Jordan Trace</string>
    <string name="thermite_dob">March 14th, 1982</string>
    <string name="thermite_weight">1.78 M</string>
    <string name="thermite_height">80 KG</string>
    <string name="thermite_background">Trace joined the marines after high school, serving two tours in Iraq. After his discharge he used his GI Bill money to put himself through college at Texas A\-M and earned a Bachelor of Science in Chemistry. He then joined the FBI. After four years as a field agent he transferred to FBI SWAT.</string>
    <string name="thermite_profile">Regimented, disciplined, orderly, these are some of the words people use to describe Trace. He knows when to relax, especially in social situations. He takes pride in knowing all of the variables. Trace prefers to be the one in control rather than leave things in chance.</string>
    <string name="thermite_training">USMC Close Quarters Battle School \n\nUSMC Methods of Entry \n\nUSMC Helicopter and Rope Suspension Techniques Course \n\nTexas A\-M: Bachelor of Science, Chemistry \n\nFBI Field Agent \n\nFBI Swat</string>
    <string name="thermite_experience">Two tours of duty in Iraq \n\nFleet Antiterrorism Security Teams (FAST)</string>
    <string name="thermite_notes">None</string>
    <string name="thermite_gadget_name">BRIMSTONE BC-3</string>
    <string name="thermite_gadget_name_byline">Exothermic Charge</string>
    <string name="thermite_gadget">Thermite sets an exothermic charge that destroys reinforced walls.</string>
    <string name="thermite_gadget_one">Remote detonated.</string>
    <string name="thermite_gadget_two">Rolling mat affixed to an incendiary device.</string>
    <string name="twitch_name">Emmanuelle Pichon</string>
    <string name="twitch_dob">October 12th, 1988</string>
    <string name="twitch_weight">1.68 M</string>
    <string name="twitch_height">58 KG</string>
    <string name="twitch_background">Born in the historic town of Nancy, Pichon grew up in a family that valued education, particularly math and science. Early participation in sponsored computer programming competitions led to her joining the army cadets at sixteen.</string>
</resources>