<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_bottom_attackers"
            android:icon="@drawable/ic_attackers"
            android:title="@string/nav_drawer_attackers" />
        <item
            android:id="@+id/nav_bottom_defenders"
            android:icon="@drawable/ic_defenders"
            android:title="@string/nav_drawer_defenders" />
        <item
            android:id="@+id/nav_bottom_units"
            android:icon="@drawable/ic_units"
            android:title="@string/nav_drawer_units" />
        <item
            android:id="@+id/nav_bottom_weapons"
            android:icon="@drawable/ic_weapons"
            android:title="@string/nav_drawer_weapons" />
    </group>
</menu>