<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="8dp"
    android:paddingTop="8dp">

    <!-- 5.7 USG -->



    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        card_view:cardBackgroundColor="@color/colorDarkFour">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="Handgun - 5.7 USG"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/text_size_one" />


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:padding="9dp"
                android:id="@+id/x57usg_image" />


        </LinearLayout>


    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        card_view:cardBackgroundColor="@color/colorDarkFour">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="8dp"
                android:text="@string/title_stats"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/text_size_three" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:orientation="vertical"
                android:paddingBottom="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:padding="8dp"
                    android:text="Damage            42 (Suppressed 35)"
                    android:textColor="@color/colorWhiteOne"
                    android:textSize="@dimen/text_size_three" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:padding="8dp"
                    android:text="Fire Rate           1"
                    android:textColor="@color/colorWhiteOne"
                    android:textSize="@dimen/text_size_three" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:padding="8dp"
                    android:text="Mobility             50"
                    android:textColor="@color/colorWhiteOne"
                    android:textSize="@dimen/text_size_three" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:padding="8dp"
                    android:text="Capacity            20"
                    android:textColor="@color/colorWhiteOne"
                    android:textSize="@dimen/text_size_three" />

            </LinearLayout>


        </LinearLayout>

    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="8dp"
        card_view:cardBackgroundColor="@color/colorDarkFour">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="16dp"
                android:text="@string/title_scope"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/text_size_three" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="16dp"
                    android:paddingLeft="16dp"
                    android:text="@string/no_scope"
                    android:textColor="@color/colorWhiteTwo"
                    android:textSize="@dimen/text_size_three" />


            </LinearLayout>


        </LinearLayout>

    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="8dp"
        card_view:cardBackgroundColor="@color/colorDarkFour">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="16dp"
                android:text="@string/title_grip"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/text_size_three" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="16dp"
                        android:paddingLeft="16dp"
                        android:text="@string/no_grip"
                        android:textColor="@color/colorWhiteTwo"
                        android:textSize="@dimen/text_size_three" />


                </LinearLayout>


            </LinearLayout>


        </LinearLayout>

    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="8dp"
        card_view:cardBackgroundColor="@color/colorDarkFour">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="16dp"
                android:text="@string/title_barrel"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/text_size_three" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView

                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:paddingBottom="16dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/muzzle" />

                <ImageView

                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:paddingBottom="16dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/suppresser" />


            </LinearLayout>


        </LinearLayout>

    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="8dp"
        card_view:cardBackgroundColor="@color/colorDarkFour">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="16dp"
                android:text="@string/title_underbarrel"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/text_size_three" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView

                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:paddingBottom="16dp"
                        android:scaleType="centerInside"
                        android:src="@drawable/laser" />


                </LinearLayout>


            </LinearLayout>


        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="8dp"
        card_view:cardBackgroundColor="@color/colorDarkFour">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="16dp"
                android:text="@string/title_comment"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/text_size_three" />


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="50dp"
                android:paddingBottom="16dp"
                android:paddingLeft="16dp"
                android:layout_margin="8dp"
                android:gravity="top|left"
                android:background="@color/colorPrimaryDark"
                android:paddingRight="16dp"
                android:paddingTop="16dp"
                android:id="@+id/x57usg_edit"
                android:hint="@string/title_help_notes"
                android:textColorHint="@color/colorWhiteThree"
                android:textColor="@color/colorWhiteTwo"
                android:textSize="@dimen/text_size_four" />

            <Button
                android:layout_width="wrap_content"
                android:layout_gravity="right"
                android:layout_height="wrap_content"
                android:id="@+id/x57usg_save"
                android:text="Save"
                android:paddingRight="16dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:paddingBottom="4dp"
                android:paddingTop="4dp"
                android:paddingLeft="16dp"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:background="@color/colorAccent"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/text_size_four" />


        </LinearLayout>

    </android.support.v7.widget.CardView>


</LinearLayout>

